# AutoMIL

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy_docs.yml  unittests.yaml
api/cli/: index.html
api/dataset/: index.html
api/evaluation/: index.html
api/model/: index.html
api/project/: index.html
api/trainer/: index.html
assets/: lung_labels.csv
automil/: cli.py  cli_help.py  dataset.py  estimator.py  evaluation.py  feasibility.py  memory.py  model.py  pipeline.py  project.py  resource_optimizer.py  runtime.py  trainer.py  utils.py
automil/Experiments/: __init__.py  experiment.py
automil/util/: __init__.py  backend.py  bags.py  constants.py  enums.py  gpu.py  logging.py  pretiled.py  slide.py  tiff_conversion.py
docs/: index.md
docs/api/: cli.md  dataset.md  evaluation.md  model.md  project.md  trainer.md
docs/getstarted/: installation.md  quickstart.md  requirements.md
docs/stylesheets/: extra.css
getstarted/installation/: index.html
getstarted/quickstart/: index.html
getstarted/requirements/: index.html
search/: search_index.json
src/: cli.py  dataset.py  estimator.py  evaluation.py  fingerprinting.py  magnification_test.py  model.py  pipeline.py  project.py  trainer.py  utils.py
src/Experiments/: README.md  experiment.py
stylesheets/: extra.css
tests/: conftest.py  test_backend.py  test_dataset.py  test_project.py  test_trainer.py  test_utils.py
