[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automil"
version = "0.1.0"
description = "Automated Multiple Instance Learning pipeline for whole slide image analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jonas", email = "Waibel.Jonas@kabelmail.de"},
]
keywords = ["machine-learning", "medical-imaging", "multiple-instance-learning", "whole-slide-imaging"]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.0",
    "imgui>=2.0.0",
    "nystrom-attention>=0.0.14",
    "openslide-bin>=4.0.0.8",
    "openslide-python>=1.4.2",
    "pyrfr>=0.9.0",
    "pyvips>=3.0.0",
    "slideflow>=3.0.2",
    "swig>=4.3.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/jonas/AutoMIL"
"Source" = "https://github.com/jonas/AutoMIL"

[project.scripts]
automil = "automil.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["automil"]

[tool.hatch.build.targets.sdist]
include = [
    "/automil",
    "/README.md",
    "/pyproject.toml",
]